# Market-Making

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  analytics_engine.Dockerfile  compose.yaml  feed_handler.Dockerfile  kdb-test.dockerfile  message_queue.Dockerfile  order_book_gui.Dockerfile
.github/workflows/: build.yml  market-making.yml
FeedHandler/: CMakeLists.txt
FeedHandler/header/: FIX.h  api_handler.hpp  coinbase_client.hpp  fix.hpp  order_book_struct.hpp  orderbook.hpp  trading_messages.hpp
FeedHandler/main/: api_handler_main.cpp  coinbase_client_main.cpp  coinbase_websocket_listener.cpp
FeedHandler/src/: api_handler.cpp  coinbase_client.cpp  orderbook.cpp  trading_messages.cpp
docker/FeedHandler/: Dockerfile  feed_handler.Dockerfile
docker/kdb/: Dockerfile  kdb.Dockerfile
kdb/q/: example.q  kc.lic
kdb/qscripts/: example.q
scripts/: docker_entrypoint.sh
test/: CMakeLists.txt  main.cpp
test/test/: CMakeLists.txt  boost_example.cpp
